[tool.poetry]
name = "report-card"
version = "0.1.0"
description = ""
authors = ["justin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
plotly-express = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
